tests/e2e/tests/pilot/testdata/networking/v1alpha3/envoyfilter-c.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple-envoy-filter
spec:
  workloadSelector:
    app: c
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value: |
        name: envoy.fault
        config:
          abort:
            percentage:
              numerator: 100
              denominator: HUNDRED
            httpStatus: 444
          headers:
            name: envoyfilter-test
            exactMatch: foobar123
